Implementing Users REST APIs. Removing additionalModelTypeAnnotations in pom.xml (since autogenerated lombok getters/setters caused issues). Adding mapstruct dependency. Setting spring boot to 3.3.2
